Added different texts on asteroids
Now you start typing and it automatically targets the first asteroid
which starts with your letter. After you finish that asteroid you can
switch to another one by typing that one's first letter.

Words come like this: for each wave, there will come words of length
<wave + 1>. This needs to be adjusted, as the difficulty increases
exponentially.

--- a/FalconWarriors/FalconWarriors.CSharp.csproj
+++ b/FalconWarriors/FalconWarriors.CSharp.csproj
@@ -81,6 +81,22 @@
     <Compile Include="Assets\_Completed-Assets\Scripts\Done_WeaponController.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Files\1.txt" />
+    <None Include="Assets\Files\10.txt" />
+    <None Include="Assets\Files\11.txt" />
+    <None Include="Assets\Files\12.txt" />
+    <None Include="Assets\Files\13.txt" />
+    <None Include="Assets\Files\14.txt" />
+    <None Include="Assets\Files\15.txt" />
+    <None Include="Assets\Files\18.txt" />
+    <None Include="Assets\Files\2.txt" />
+    <None Include="Assets\Files\3.txt" />
+    <None Include="Assets\Files\4.txt" />
+    <None Include="Assets\Files\5.txt" />
+    <None Include="Assets\Files\6.txt" />
+    <None Include="Assets\Files\7.txt" />
+    <None Include="Assets\Files\8.txt" />
+    <None Include="Assets\Files\9.txt" />
     <None Include="Assets\TutorialInfo\Fonts\LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
